--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ crash.log
 # version control.
 #
 # example.tfvars
+terraform.tfvars
+*.ini
+.terraform
+log
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
