--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -8,7 +8,7 @@ trigger:
   
   variables:
     # Azure Resource Manager connection created during pipeline creation
-    azureServiceConnectionId: ''
+    azureServiceConnectionId: 'e62bbea0-5e9d-4923-ae2d-1e2735ea5e1'
   
     # Agent VM image name
     vmImageName: 'Ubuntu-18.04'
