--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -25,7 +25,7 @@ stages:
     jobs:
       - job: BuildJob
         pool:
-          name: 'ubuntu-latest'
+          name: $(vmImageName)
         steps:
           - task: InstallSSHKey@0
             inputs:
