--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -11,7 +11,7 @@ variables:
   azureServiceConnectionId: 'e62bbea0-5e9d-4923-ae2d-1e2735ea5e1'
   
   # Agent VM image name
-  vmImageName: 'Ubuntu-18.04'
+  vmImageName: 'ubuntu-18.04'
   
   # Project root folder. Point to the folder containing manage.py file.
   projectRoot: $(System.DefaultWorkingDirectory)
