--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -38,3 +38,23 @@ stages:
               replaceExistingArchive: true
           - upload: $(Build.BuildId)/selenium-tests.zip
             artifact: selenium
+    
+  - stage: WebAppDeployment
+    displayName: Web App Deployment
+    jobs:
+    - deployment: FakeRestAPI
+      pool:
+        vmImage: 'ubuntu-18.04'
+      environment: 'WAP-TEST'
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+            - task: AzureWebApp@1
+              displayName: 'Deploy Azure Web App'
+              inputs:
+                azureSubscription: 'e62bbea0-5e9d-4923-ae2d-1e2735ea5e1e'
+                appType: 'webApp'
+                appName: 'jc-test-AppService'
+                package: '$(Pipeline.Workspace)/drop-fakerestapi/$(Build.BuildId)-fakerestapi.zip'
+                deploymentMethod: 'auto'
