adding UI Tests -Selenium in VM-Test

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -45,7 +45,7 @@ stages:
     - deployment: FakeRestAPI
       pool:
         vmImage: 'ubuntu-18.04'
-      environment: 'WAP-TEST'
+      environment: 'WEBAPP-TEST'
       strategy:
         runOnce:
           deploy:
@@ -110,6 +110,33 @@ stages:
                   python3 uitests.py > ui-logs.log
                   sudo mv ui-logs.log /var/logs
                   
+  - stage: UITests
+    displayName: UI Tests
+    jobs:
+    - deployment: VMRunUITests
+      displayName: Run UI Tests
+      environment:
+        name:  'VM-TEST'
+        resourceType: VirtualMachine
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+            - download: current
+              displayName: 'Download Selenium'
+              artifact: selenium
+            - task: Bash@3
+              displayName: UI Tests
+              inputs:
+                targetType: 'inline'
+                script: |
+                  unzip -o $(Pipeline.Workspace)/selenium/selenium-tests.zip -d .
+                  sudo mkdir /var/logs
+                  python3 uitests.py > ui-logs.log
+                  cat ui-logs.log
+                  sudo mv ui-logs.log /var/logs
+
+
   - stage: UITests
     displayName: UI Tests
     jobs:
