selenium tests fixes 19:14pm

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -177,18 +177,18 @@ stages:
       - task: CmdLine@2
         displayName: Run Regression Tests
         inputs:
-          script: 'newman run postman/Regression_Test_Suite.postman_collection.json -e postman/Test_Suite.postman_environment.json --delay-request 5000 --bail newman -x --reporters cli,junit --reporter-junit-export Results/RegressionTests.xml'
+          script: 'newman run postman/Regression_Test_Suite.postman_collection.json -e postman/Test_Suite.postman_environment.json --delay-request 5000 --bail newman -x --reporters cli,junit --reporter-junit-export Results/RegressionTests.xml --suppress-exit-code'
           workingDirectory: '$(System.DefaultWorkingDirectory)'
         continueOnError: true
       - task: CmdLine@2
         displayName: Run Data Validation Tests
         inputs:
-          script: 'newman run postman/Data_Validation_Test_Suite.postman_collection.json -e postman/Data_Validation_Test_Suite.postman_environment.json --delay-request 5000 --bail newman -x --reporters cli,junit --reporter-junit-export Results/DataValidationTests.xml'
+          script: 'newman run postman/Data_Validation_Test_Suite.postman_collection.json -e postman/Data_Validation_Test_Suite.postman_environment.json --delay-request 5000 --bail newman -x --reporters cli,junit --reporter-junit-export Results/DataValidationTests.xml --suppress-exit-code'
           workingDirectory: '$(System.DefaultWorkingDirectory)'
         continueOnError: true
       - task: CmdLine@2
         inputs:
-          script: 'ls'
+          script: 'ls -la ./Results/'
           workingDirectory: '$(System.DefaultWorkingDirectory)'
       - task: PublishTestResults@2
         displayName: Publish Test Reports
